--- a/Indiahikes.html
+++ b/Indiahikes.html
@@ -1,3 +1,5 @@
+<!-- Script Source: https://github.com/gurumukhi/TrekVitals-Scripts/Indiahikes.html -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,49 +9,58 @@
 
     <body>
         <script>
+            // Script Source: https://github.com/gurumukhi/TrekVitals-Scripts/Indiahikes.html
             const generate = () => {
-                const jsonTableStr = document.querySelector("#json").value;
-                const jsonTable = JSON.parse(jsonTableStr.substr("batchJson=".length, jsonTableStr.length));
-                const trekkers = jsonTable[0].trekkers.map((a, index) => ({
-                    SrNo: index + 1,
-                    TrekkerName: a.name,
-                    City: a.city,
-                    Phone: a.phone_number,
-                }));
+                try {
+                    const jsonTableStr = document.querySelector("#json").value.trim();
+                    const jsonTable = JSON.parse(jsonTableStr.substr("batchJson=".length, jsonTableStr.length));
+                    const trekkers = jsonTable[0].trekkers.map((a, index) => ({
+                        SrNo: index + 1,
+                        TrekkerName: a.name,
+                        City: a.city,
+                        Phone: a.phone_number,
+                    }));
 
-                function generateTableHead(table, data) {
-                    table.style.borderCollapse = "collapse";
-                    table.style.borderSpacing = "0";
-                    let thead = table.createTHead();
-                    let row = thead.insertRow();
-                    for (let key of data) {
-                        let th = document.createElement("th");
-                        let text = document.createTextNode(key);
-                        th.appendChild(text);
-                        row.appendChild(th);
-                    }
-                }
-
-                function generateTable(table, data) {
-                    for (let element of data) {
-                        let row = table.insertRow();
-                        for (key in element) {
-                            let cell = row.insertCell();
-                            let text = document.createTextNode(element[key]);
-                            cell.appendChild(text);
-                            cell.style.border = "1px solid gray";
-                            cell.style.padding = "10px";
-                            cell.style.margin = "0px";
+                    function generateTableHead(table, data) {
+                        table.style.borderCollapse = "collapse";
+                        table.style.borderSpacing = "0";
+                        let thead = table.createTHead();
+                        let row = thead.insertRow();
+                        for (let key of data) {
+                            let th = document.createElement("th");
+                            let text = document.createTextNode(key);
+                            th.appendChild(text);
+                            row.appendChild(th);
                         }
                     }
+
+                    function generateTable(table, data) {
+                        for (let element of data) {
+                            let row = table.insertRow();
+                            for (key in element) {
+                                let cell = row.insertCell();
+                                let text = document.createTextNode(element[key]);
+                                cell.appendChild(text);
+                                cell.style.border = "1px solid gray";
+                                cell.style.padding = "10px";
+                                cell.style.margin = "0px";
+                            }
+                        }
+                    }
+
+                    let table = document.querySelector("table");
+                    let data = Object.keys(trekkers[0]);
+                    generateTableHead(table, data);
+                    generateTable(table, trekkers);
+
+                    document.querySelector("#trekName").innerHTML = `${jsonTable[0].trek.name} (${jsonTable[0].trek.id})`;
+
+                    document.querySelector("#startDate").innerHTML = jsonTable[0].start_date;
+                    document.querySelector("#input").style.display = "none";
+                    document.querySelector("#output").style.display = "block";
+                } catch (err) {
+                    alert(err);
                 }
-
-                let table = document.querySelector("table");
-                let data = Object.keys(trekkers[0]);
-                generateTableHead(table, data);
-                generateTable(table, trekkers);
-
-                document.querySelector("#input").style.display = "none";
             };
         </script>
 
@@ -59,10 +70,19 @@
             <textarea id="json" name="json" rows="4" cols="50" placeholder="Enter JSON data here to generate printable table"> </textarea>
             <button onClick="generate()">Generate Printable Table</button>
         </div>
-        <br />
-        <br />
-        <table>
-            <!-- here goes our data! -->
-        </table>
+        <div id="output" style="display: none;">
+            <br />
+
+            <div id="outputTitle">
+                <b>Trek Name:</b><span id="trekName"></span>
+                <br />
+                <b>Date: </b><span id="startDate"></span>
+            </div>
+            <br />
+            <br />
+            <table>
+                <!-- here goes our data! -->
+            </table>
+        </div>
     </body>
 </html>
