--- a/Indiahikes.html
+++ b/Indiahikes.html
@@ -53,7 +53,7 @@
                     generateTableHead(table, data);
                     generateTable(table, trekkers);
 
-                    document.querySelector("#trekName").innerHTML = `${jsonTable[0].trek.name} (${jsonTable[0].trek.id})`;
+                    document.querySelector("#trekName").innerHTML = `${jsonTable[0].trek.name}`;
                     document.querySelector("#startDate").innerHTML = jsonTable[0].start_date;
                     document.querySelector("#input").style.display = "none";
                     document.querySelector("#output").style.display = "block";
