--- a/Printout-Indiahikes.html
+++ b/Printout-Indiahikes.html
@@ -5,6 +5,16 @@
     <head>
         <meta charset="UTF-8" />
         <title>Generate table from JSON</title>
+        
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQKB9YJF9L"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-JQKB9YJF9L');
+        </script>
+        
     </head>
 
     <body>
